flux/apps/int/jellyfin/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
spec:
  type: ClusterIP
  ports:
    - port: 8096
      targetPort: http
      protocol: TCP
      name: http
    - port: 7359
      targetPort: autodiscovery
      protocol: UDP
      name: autodiscovery
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
      app.kubernetes.io/instance: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
        app.kubernetes.io/instance: jellyfin
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: jellyfin
          image: "jellyfin/jellyfin:10.11.8"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
            - name: autodiscovery
              containerPort: 7359
              protocol: UDP
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            failureThreshold: 3
            timeoutSeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 4Gi
              gpu.intel.com/i915: "1" # require iGPU
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: movies
              mountPath: /movies
              readOnly: true
            - name: tv
              mountPath: /tv
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
        - name: cache
          persistentVolumeClaim:
            claimName: cache-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: movies-pvc
        - name: tv
          persistentVolumeClaim:
            claimName: tv-pvc
