flux/apps/int/jellyfin/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
spec:
  type: ClusterIP
  ports:
    - port: 8096
      targetPort: http
      protocol: TCP
      name: http
    - port: 7359
      targetPort: autodiscovery
      protocol: UDP
      name: autodiscovery
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
